service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ValidateToken (TokenRequest) returns (TokenResponse);
  }