service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
    rpc GetUserOrders (UserOrdersRequest) returns (UserOrdersResponse);
  }